# SQL-Proxy-Service

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: database.conf  policy.conf
sql/: schema.sql  seed.sql
src/: main.cpp
src/analyzer/: SqlAnalyzer.cpp  SqlAnalyzer.h
src/audit/: AuditLogger.cpp  AuditLogger.h
src/classifier/: PiiClassifier.cpp  PiiClassifier.h
src/config/: DatabaseConfig.cpp  DatabaseConfig.h
src/executor/: QueryExecutor.cpp  QueryExecutor.h  QueryResult.h
src/logger/: Logger.cpp  Logger.h
src/masking/: DataMasker.cpp  DataMasker.h
src/policy/: PolicyEngine.cpp  PolicyEngine.h
src/proxy/: SqlProxyService.cpp  SqlProxyService.h
src/utils/: StringUtils.h
tests/: test_AuditLogger.cpp  test_DataMasker.cpp  test_PolicyEngine.cpp  test_QueryExecutor.cpp  test_SqlProxyService.cpp  test_analyzer.cpp  test_pii_classifier.cpp
